# menstruation-server.rs

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs
