[package]
name = "menstruation-server"
version = "0.1.0"
authors = ["Kierán Meinhardt <kieran.meinhardt@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde_json = "1.0"
chrono = "0.4.6"

[dependencies.menstruation]
git = "https://github.com/kmein/menstruation.rs"
